<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zzz.voicecommdemo.ui.MainActivity" >

    <TextView
        android:id="@+id/textview_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/edittext_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_hello"
        android:hint="@string/code_hint"
        android:inputType="text"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_code"
        android:text="@string/play" />

    <Button
        android:id="@+id/button_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_play"
        android:text="@string/record" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_record"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/textview_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_stop" />

</RelativeLayout>